# CyberEdge

./: .dockerignore  .env  .env.production  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  SECURITY.md  TESTING.md  TODOLIST  build.rs  compose.cve.yaml  compose.nuclei.yaml  compose.public-code.yaml  compose.registration.yaml  compose.screenshots.yaml  compose.web.yaml  compose.yaml  docker-compose.yaml  generate_env.sh  go.mod  go.sum  install.sh  manage.py  nginx.conf  requirements.txt  run-all-tests.sh  rust-toolchain.toml  start-dev.sh  start.sh  tailwind.config.js  test-all.sh  test-config.json
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml  test.yml
backend/: .env.example  DATABASE_MIGRATION_GUIDE.md  Dockerfile.frontend  README.md  api_simple_test.go  api_test.go  coverage.out  docker-compose.yaml  example_integration.md  go.mod  go.sum  integration_test.go  manage_database.sh  migrate_to_complete_schema.sql  nginx.conf  rollback_complete_schema.sql  schema.sql  schema_complete.sql  schema_validation_test.go  test-all.sh  test.sh  trivy-dev-results.json  trivy-results.json
backend/.claude/: settings.local.json
backend/cmd/: cyberedge.go
backend/docs/: 数据交换架构.md  数据模型设计.md  现行标准.md  程序基础设计.md
cmd/: cyberedge.go
common/: models.py  utils.py
config/: agents.example.toml
cyberedge/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
design-system/cyberedge/: MASTER.md
docs/: ai-native-architecture.md  architecture.md  arl-capability-map.md  operations.md  registration-provider-contract.md  任务编写标准.md  前端UI框架迁移计划.md  数据模型设计.md
docs/apidocs/: CyberEdge.openapi.json
domain_scanner/: apps.py
frontend/: .env.development  .env.example  README.md  TEST_SUMMARY.md  fix-tailwind.js  package-lock.json  package.json  vitest.config.js  vue.config.js
frontend/coverage/: coverage-final.json  index.html
frontend/src/: App.vue  main.css  main.js
frontend/test/: setup.js
full_scanner/: apps.py  tasks.py  urls.py  views.py
ip_scanner/: apps.py
migrations/: 0001_initial.sql  0002_discovery_model.sql  0003_schedules.sql  0004_monitor_changes.sql  0005_services.sql  0006_certificates.sql  0007_websites.sql  0008_exposure_changes.sql  0009_notification_delivery.sql  0010_findings.sql  0011_website_fingerprints.sql  0012_website_discovered_paths.sql  0013_website_screenshot.sql
path_scanner/: apps.py  models.py  tasks.py  urls.py  views.py
pkg/api/: middleware.go  router.go
pkg/dao/: config_dao.go  result_dao.go  target_dao.go  task_dao.go  user_dao.go
pkg/factory/: scheduler.go  task.go
pkg/logging/: logging.go
pkg/models/: auth.go  result_model.go  scheduler.go  target_model.go  task.go  task_model.go  user.go  user_model.go
pkg/service/: config_service.go  dns_service.go  httpx_service.go  result_service.go  target_service.go  task_service.go  user_service.go
pkg/setup/: connet.go  task_register.go  task_setup.go
pkg/task/: ping.go  scheduler.go  task.go  worker.go
pkg/tasks/: ffuf_task.go  handler.go  (+8 more)
port_scanner/: apps.py  models.py  tasks.py  urls.py  views.py
scripts/: validate-skills.py
src/: intelligence.rs  lib.rs  main.rs  notification.rs  nuclei.rs  policy.rs  service.rs  service_tests.rs  web.rs  worker.rs
subdomain_scanner/: apps.py  models.py  tasks.py  urls.py  views.py
tests/: bridge.rs  cve_socket.rs  discovery.rs  notification.rs  nuclei_socket.rs  postgres.rs  public_code_socket.rs  registration_socket.rs  rpc.rs  screenshot_socket.rs  tls.rs  web.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
wordlist/: default_wordlist.txt  poc.txt  test.txt  top7000.txt
(+263 files in other folders)
