[package]
name = "cyberedge"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
build = "build.rs"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.91"
bytes = "1"
prost = "0.14.4"
prost-types = "0.14.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", default-features = false, features = ["json", "macros", "migrate", "postgres", "runtime-tokio"] }
thiserror = "2.0.19"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { version = "0.1.19", features = ["net"] }
toml = "1.1.3"
tonic = "0.14.6"
tonic-prost = "0.14.6"
uuid = { version = "1.24.0", features = ["v7"] }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.6"

[profile.release]
lto = "thin"
strip = "symbols"
